--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(Anwesenheitszeiten)
 export(Arbz)
 export(CreateAngebot)
 export(CreateProjekt)
+export(Rechnung)
 export(Steuer)
 export(Vertrag)
 export(folder)
