--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,9 @@ export(CreateAngebot)
 export(CreateProjekt)
 export(Rechnung)
 export(Steuer)
+export(Steuer_raiba)
 export(Vertrag)
 export(folder)
 export(install_projekt)
+export(make_konto)
 export(rechnung_email)
