--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,11 +7,14 @@ export(Anwesenheitszeiten)
 export(Arbz)
 export(CreateAngebot)
 export(CreateProjekt)
+export(IBAN)
 export(Rechnung)
 export(Steuer)
 export(Steuer_raiba)
 export(Vertrag)
+export(email)
 export(folder)
 export(install_projekt)
 export(make_konto)
+export(phone)
 export(rechnung_email)
