Neue Funktion Stundensatz() und Fehler abfangen bei AZ()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(IBAN)
 export(Rechnung)
 export(Steuer)
 export(Steuer_raiba)
+export(Stundensatz)
 export(Vertrag)
 export(email)
 export(folder)
