Variablen einheitlich bezeichnet, Vorlagen verbessert.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,9 @@ export(Stundensatz)
 export(Vertrag)
 export(email)
 export(folder)
-export(install_projekt)
+export(insert_new_csv)
 export(make_konto)
 export(phone)
 export(rechnung_email)
+export(update_arbeitszeit)
+export(update_status_csv)
